// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boards.jsx Snapshot: Match admin 1`] = `
<div
  className="ant-spin-nested-loading"
>
  <div
    className="ant-spin-container"
  >
    <h1>
      Boards
    </h1>
    <div
      className="box-container"
    >
      <div
        className="box-container__toolbox"
      >
        <span
          className="ant-input-group-wrapper ant-input-search"
          style={
            Object {
              "width": 250,
            }
          }
        >
          <span
            className="ant-input-wrapper ant-input-group"
          >
            <span
              className="ant-input-affix-wrapper"
              onMouseUp={[Function]}
              style={null}
            >
              <input
                className="ant-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Search..."
                style={null}
                type="text"
                value=""
              />
              <span
                className="ant-input-suffix"
              >
                <span
                  aria-label="close-circle"
                  className="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                  onClick={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <span
              className="ant-input-group-addon"
            >
              <button
                className="ant-btn ant-btn-icon-only ant-input-search-button"
                onClick={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <span
                  aria-label="search"
                  className="anticon anticon-search"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
        <button
          className="ant-btn"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-label="sync"
            className="anticon anticon-sync"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="sync"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
              />
            </svg>
          </span>
          <span>
            Refresh
          </span>
        </button>
      </div>
      <div
        className="ant-row box-container__row"
        style={
          Object {
            "marginBottom": 16,
            "marginLeft": -16,
            "marginRight": -16,
            "marginTop": -16,
          }
        }
      >
        <div
          className="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 ant-col-xl-8 ant-col-xxl-6"
          style={
            Object {
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            }
          }
        >
          <div
            className="ant-card ant-card-bordered ant-card-hoverable card--bordered"
            onClick={[Function]}
            style={
              Object {
                "background": "linear-gradient(to right bottom, #3ba5ff, #9254de)",
              }
            }
          >
            <div
              className="ant-card-head"
              style={Object {}}
            >
              <div
                className="ant-card-head-wrapper"
              >
                <div
                  className="ant-card-head-title"
                >
                  test-smoke
                </div>
              </div>
            </div>
            <div
              className="ant-card-body"
              style={Object {}}
            >
              <div
                className="ant-descriptions ant-descriptions-small descriptions--iconic  card-undefined"
              >
                <div
                  className="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <td
                          className="ant-descriptions-item ellipsis"
                          colSpan={1}
                        >
                          <div
                            className="ant-descriptions-item-container"
                          >
                            <span
                              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
                            >
                              <span
                                aria-label="idcard"
                                className="anticon anticon-idcard"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="idcard"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 632H136V232h752v560zM610.3 476h123.4c1.3 0 2.3-3.6 2.3-8v-48c0-4.4-1-8-2.3-8H610.3c-1.3 0-2.3 3.6-2.3 8v48c0 4.4 1 8 2.3 8zm4.8 144h185.7c3.9 0 7.1-3.6 7.1-8v-48c0-4.4-3.2-8-7.1-8H615.1c-3.9 0-7.1 3.6-7.1 8v48c0 4.4 3.2 8 7.1 8zM224 673h43.9c4.2 0 7.6-3.3 7.9-7.5 3.8-50.5 46-90.5 97.2-90.5s93.4 40 97.2 90.5c.3 4.2 3.7 7.5 7.9 7.5H522a8 8 0 008-8.4c-2.8-53.3-32-99.7-74.6-126.1a111.8 111.8 0 0029.1-75.5c0-61.9-49.9-112-111.4-112s-111.4 50.1-111.4 112c0 29.1 11 55.5 29.1 75.5a158.09 158.09 0 00-74.6 126.1c-.4 4.6 3.2 8.4 7.8 8.4zm149-262c28.5 0 51.7 23.3 51.7 52s-23.2 52-51.7 52-51.7-23.3-51.7-52 23.2-52 51.7-52z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              className="ant-descriptions-item-content"
                            >
                              <div
                                className="ellipsis"
                                style={
                                  Object {
                                    "color": "#fff",
                                  }
                                }
                              >
                                test-smoke
                              </div>
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <td
                          className="ant-descriptions-item"
                          colSpan={1}
                        >
                          <div
                            className="ant-descriptions-item-container"
                          >
                            <span
                              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
                            >
                              <span
                                aria-label="snippets"
                                className="anticon anticon-snippets"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="snippets"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 112H724V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H500V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H320c-17.7 0-32 14.3-32 32v120h-96c-17.7 0-32 14.3-32 32v632c0 17.7 14.3 32 32 32h512c17.7 0 32-14.3 32-32v-96h96c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM664 888H232V336h218v174c0 22.1 17.9 40 40 40h174v338zm0-402H514V336h.2L664 485.8v.2zm128 274h-56V456L544 264H360v-80h68v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h152v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h68v576z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              className="ant-descriptions-item-content"
                            >
                              <span
                                className="ant-tag ant-tag-has-color"
                                style={
                                  Object {
                                    "backgroundColor": "#3ba5ff",
                                  }
                                }
                              >
                                projects
                              </span>
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <td
                          className="ant-descriptions-item"
                          colSpan={1}
                        >
                          <div
                            className="ant-descriptions-item-container"
                          >
                            <span
                              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
                            >
                              <span
                                aria-label="clock-circle"
                                className="anticon anticon-clock-circle"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="clock-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                  />
                                  <path
                                    d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              className="ant-descriptions-item-content"
                            >
                              <span
                                className="ant-tag ant-tag-has-color"
                                style={
                                  Object {
                                    "backgroundColor": "#9254de",
                                  }
                                }
                              >
                                weeks
                              </span>
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="text-center"
      >
        <ul
          className="ant-pagination no-paginate"
          style={Object {}}
          unselectable="unselectable"
        >
          <li
            aria-disabled={true}
            className="ant-pagination-prev ant-pagination-disabled"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Previous Page"
          >
            <button
              className="ant-pagination-item-link"
              disabled={true}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-label="left"
                className="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex="0"
            title={1}
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled={true}
            className="ant-pagination-next ant-pagination-disabled"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Next Page"
          >
            <button
              className="ant-pagination-item-link"
              disabled={true}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-label="right"
                className="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            className="ant-pagination-options"
          >
            <div
              className="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="ant-select-selector"
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <span
                  className="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autoComplete="off"
                    className="ant-select-selection-search-input"
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onPaste={[Function]}
                    readOnly={true}
                    role="combobox"
                    style={
                      Object {
                        "opacity": 0,
                      }
                    }
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  className="ant-select-selection-item"
                  title="10 / page"
                >
                  10 / page
                </span>
              </div>
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <span
                  aria-label="down"
                  className="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="button-action"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        <div
          className=""
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-circle ant-btn-icon-only button"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-label="plus"
              className="anticon anticon-plus"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="plus"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                />
                <path
                  d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Boards.jsx Snapshot: Match user 1`] = `
<div
  className="ant-spin-nested-loading"
>
  <div
    className="ant-spin-container"
  >
    <h1>
      Boards
    </h1>
    <div
      className="box-container"
    >
      <div
        className="box-container__toolbox"
      >
        <span
          className="ant-input-group-wrapper ant-input-search"
          style={
            Object {
              "width": 250,
            }
          }
        >
          <span
            className="ant-input-wrapper ant-input-group"
          >
            <span
              className="ant-input-affix-wrapper"
              onMouseUp={[Function]}
              style={null}
            >
              <input
                className="ant-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Search..."
                style={null}
                type="text"
                value=""
              />
              <span
                className="ant-input-suffix"
              >
                <span
                  aria-label="close-circle"
                  className="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                  onClick={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <span
              className="ant-input-group-addon"
            >
              <button
                className="ant-btn ant-btn-icon-only ant-input-search-button"
                onClick={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <span
                  aria-label="search"
                  className="anticon anticon-search"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
        <button
          className="ant-btn"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-label="sync"
            className="anticon anticon-sync"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="sync"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
              />
            </svg>
          </span>
          <span>
            Refresh
          </span>
        </button>
      </div>
      <div
        className="ant-row box-container__row"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 ant-col-xl-8 ant-col-xxl-6"
          style={Object {}}
        >
          <div
            className="ant-card ant-card-bordered ant-card-hoverable card--bordered"
            onClick={[Function]}
            style={
              Object {
                "background": "linear-gradient(to right bottom, #3ba5ff, #9254de)",
              }
            }
          >
            <div
              className="ant-card-head"
              style={Object {}}
            >
              <div
                className="ant-card-head-wrapper"
              >
                <div
                  className="ant-card-head-title"
                >
                  test-smoke
                </div>
              </div>
            </div>
            <div
              className="ant-card-body"
              style={Object {}}
            >
              <div
                className="ant-descriptions ant-descriptions-small descriptions--iconic  card-undefined"
              >
                <div
                  className="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <td
                          className="ant-descriptions-item ellipsis"
                          colSpan={1}
                        >
                          <div
                            className="ant-descriptions-item-container"
                          >
                            <span
                              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
                            >
                              <span
                                aria-label="idcard"
                                className="anticon anticon-idcard"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="idcard"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 632H136V232h752v560zM610.3 476h123.4c1.3 0 2.3-3.6 2.3-8v-48c0-4.4-1-8-2.3-8H610.3c-1.3 0-2.3 3.6-2.3 8v48c0 4.4 1 8 2.3 8zm4.8 144h185.7c3.9 0 7.1-3.6 7.1-8v-48c0-4.4-3.2-8-7.1-8H615.1c-3.9 0-7.1 3.6-7.1 8v48c0 4.4 3.2 8 7.1 8zM224 673h43.9c4.2 0 7.6-3.3 7.9-7.5 3.8-50.5 46-90.5 97.2-90.5s93.4 40 97.2 90.5c.3 4.2 3.7 7.5 7.9 7.5H522a8 8 0 008-8.4c-2.8-53.3-32-99.7-74.6-126.1a111.8 111.8 0 0029.1-75.5c0-61.9-49.9-112-111.4-112s-111.4 50.1-111.4 112c0 29.1 11 55.5 29.1 75.5a158.09 158.09 0 00-74.6 126.1c-.4 4.6 3.2 8.4 7.8 8.4zm149-262c28.5 0 51.7 23.3 51.7 52s-23.2 52-51.7 52-51.7-23.3-51.7-52 23.2-52 51.7-52z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              className="ant-descriptions-item-content"
                            >
                              <div
                                className="ellipsis"
                                style={
                                  Object {
                                    "color": "#fff",
                                  }
                                }
                              >
                                test-smoke
                              </div>
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <td
                          className="ant-descriptions-item"
                          colSpan={1}
                        >
                          <div
                            className="ant-descriptions-item-container"
                          >
                            <span
                              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
                            >
                              <span
                                aria-label="snippets"
                                className="anticon anticon-snippets"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="snippets"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 112H724V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H500V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H320c-17.7 0-32 14.3-32 32v120h-96c-17.7 0-32 14.3-32 32v632c0 17.7 14.3 32 32 32h512c17.7 0 32-14.3 32-32v-96h96c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM664 888H232V336h218v174c0 22.1 17.9 40 40 40h174v338zm0-402H514V336h.2L664 485.8v.2zm128 274h-56V456L544 264H360v-80h68v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h152v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h68v576z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              className="ant-descriptions-item-content"
                            >
                              <span
                                className="ant-tag ant-tag-has-color"
                                style={
                                  Object {
                                    "backgroundColor": "#3ba5ff",
                                  }
                                }
                              >
                                projects
                              </span>
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <td
                          className="ant-descriptions-item"
                          colSpan={1}
                        >
                          <div
                            className="ant-descriptions-item-container"
                          >
                            <span
                              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
                            >
                              <span
                                aria-label="clock-circle"
                                className="anticon anticon-clock-circle"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="clock-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                  />
                                  <path
                                    d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              className="ant-descriptions-item-content"
                            >
                              <span
                                className="ant-tag ant-tag-has-color"
                                style={
                                  Object {
                                    "backgroundColor": "#9254de",
                                  }
                                }
                              >
                                weeks
                              </span>
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="text-center"
      >
        <ul
          className="ant-pagination no-paginate"
          style={Object {}}
          unselectable="unselectable"
        >
          <li
            aria-disabled={true}
            className="ant-pagination-prev ant-pagination-disabled"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Previous Page"
          >
            <button
              className="ant-pagination-item-link"
              disabled={true}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-label="left"
                className="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex="0"
            title={1}
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled={true}
            className="ant-pagination-next ant-pagination-disabled"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Next Page"
          >
            <button
              className="ant-pagination-item-link"
              disabled={true}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-label="right"
                className="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            className="ant-pagination-options"
          >
            <div
              className="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="ant-select-selector"
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <span
                  className="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autoComplete="off"
                    className="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onPaste={[Function]}
                    readOnly={true}
                    role="combobox"
                    style={
                      Object {
                        "opacity": 0,
                      }
                    }
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  className="ant-select-selection-item"
                  title="10 / page"
                >
                  10 / page
                </span>
              </div>
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <span
                  aria-label="down"
                  className="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
